--- a/src/components/user-admin-page.scss
+++ b/src/components/user-admin-page.scss
@@ -5,11 +5,11 @@
 	position: relative;
 	top: 40px;
 	margin: 10px auto;
-	padding: 0 10px 10px;
+	padding: 0px;
 	display: block;
 	border: 1px solid #ccc;
 	box-shadow: 0 0 10px #aaa;
-	width: 700px;
+	width: 720px;
 
 	.page {
 
@@ -18,7 +18,6 @@
 			position: absolute;
 			top: -40px;
 			left: -10px;
-			// margin-left: 10px;
 			padding: 5px 10px;
 			background: #eee;
 			border-radius: 3px;
@@ -42,10 +41,8 @@
 
 		.top {
 			position: relative;
-			top: 0;
-			left: -10px;
 			padding: 10px;
-			width: 100%;
+			width: calc(100% - 20px);
 
 			color: #ffffff;
 			background: $gray;
@@ -74,6 +71,28 @@
 				border-radius: 5px;
 				border: solid 1px $gray;
 			}
+
+			.instance_search {
+				width: 200px;
+			}
+		}
+
+		.search_match {
+			box-sizing: border-box;
+			display: inline-block;
+			width: 48%;
+			margin: 5px;
+			padding: 10px;
+			border: 1px solid #d3d3d3;
+		
+			> div {
+				display: inline-block;
+			}
+		}
+		
+		.searching {
+			vertical-align: bottom;
+			margin-top: 10px;
 		}
 
 		.show_deleted {
@@ -151,12 +170,210 @@
 			}
 		}
 
-		.inst-info {
-			margin: 10px 0;
+		.admin-subsection {
+			padding: 15px;
+		
+			.top {
+				width: calc(100% + 10px);
+				left: -15px;
+			}
 
-			div {
-				display: inline-block;
-				margin: 5px 0 0;
+			&.overview {
+				width: calc(100% - 20px);
+				padding: 10px;
+	
+				div {
+					display: block;
+					margin: 0;
+				}
+	
+				span {
+					display: block;
+					margin: 5px 0;
+				}
+	
+				label {
+					display: inline-block;
+					vertical-align: top;
+					width: 160px;
+				}
+	
+				.radio {
+					display: inline-block;
+					// width: 200px;
+	
+					input {
+						margin: 0px 5px;
+					}
+	
+					label {
+						width: auto;
+					}
+				}
+	
+				.url {
+					display: inline-block;
+					vertical-align: middle;
+					// width: 500px;
+					font-size: 70%;
+					margin: 0px 0px;
+				}
+	
+				.right-justify {
+					display: flex;
+					justify-content: flex-end;
+					margin-top: 20px;
+	
+					.apply-changes {
+						display: flex;
+						flex-direction: column;
+						justify-content: flex-end;
+						width: 220px;
+						margin-right: 20px;
+	
+						.apply {
+							padding: 6px 10px 6px 10px;
+						}
+	
+						.error-text {
+							color: red;
+							font-size: 0.8em;
+							text-align: center;
+						}
+	
+						.success-text {
+							color: green;
+							font-size: 0.8em;
+							text-align: center;
+						}
+					}
+				}
+			}
+
+			&.role-manager {
+				ul {
+					padding: 10px;
+					list-style-type: none;
+
+					li {
+						font-weight: bold;
+						margin-bottom: 5px;
+
+						label {
+							margin-left: 10px;
+						}
+					}
+
+				}
+
+				dl.update-status {
+					dt {
+						display: inline-block;
+						font-weight: bold;
+					}
+
+					dd {
+						display: inline-block;
+						margin-left: 1em;
+					}
+				}
+			}
+
+			&.instances {
+
+				ul {
+					width: 100%;
+					padding: 0;
+					flex-direction: row;
+					list-style-type: none;
+				
+					li.instance {
+						margin: 0 0 10px 0;
+				
+						border-radius: 3px;
+						
+						.img-holder {
+							display: inline-block;
+							vertical-align: middle;
+				
+							img {
+								width: 50px;
+								height: 50px;
+								-moz-border-radius: 3px;
+								border-radius: 3px;
+								display: inline-block;
+								margin-right: 10px;
+							}
+						}
+				
+						div.widget-title {
+							display: flex;
+							justify-content: flex-start;
+							align-items: center;
+							gap: 10px;
+							padding: 10px 15px;
+				
+							background: $very-light-gray;
+							border: none;
+							border-radius: 3px;
+							transition: background-color 0.5s;
+				
+							span.img-holder {
+								flex-basis: 0;
+							}
+				
+							span.incomplete-status-holder {
+								color: #555;
+							}
+				
+							span.title-holder {
+								flex-grow: 1;
+				
+								.title {
+									margin: 0;
+									padding: 0;
+									vertical-align: middle;
+									font-weight: bold;
+									font-size: 20px;
+								}
+							}
+				
+							span.date-holder {
+								font-size: 12px;
+								font-weight: bold;
+							}
+						}
+				
+						.info-holder {
+							display: none;
+						}
+				
+						&.expanded {
+				
+							div.widget-title {
+								background: $light-gray;
+								border-bottom-left-radius: 0px;
+								border-bottom-right-radius: 0px;
+							}
+				
+							.manage-btn-container {
+								display: flex;
+								justify-content: end;
+								margin-top: 20px;
+							}
+				
+							.info-holder {
+								display: block;
+								padding: 15px;
+								background: $very-light-gray;
+								border-bottom-left-radius: 3px;
+								border-bottom-right-radius: 3px;
+				
+								line-height: 1.5em;
+							}
+						}
+					} 
+				}
 			}
 		}
 
@@ -194,77 +411,6 @@
 			}
 		}
 
-		.overview {
-			width: 100%;
-			padding: 10px;
-
-			div {
-				display: block;
-				margin: 0;
-			}
-
-			span {
-				display: block;
-				// margin: 5px 0px;
-			}
-
-			label {
-				display: inline-block;
-				vertical-align: top;
-				width: 160px;
-			}
-
-			.radio {
-				display: inline-block;
-				// width: 200px;
-
-				input {
-					margin: 0px 5px;
-				}
-
-				label {
-					width: auto;
-				}
-			}
-
-			.url {
-				display: inline-block;
-				vertical-align: middle;
-				// width: 500px;
-				font-size: 70%;
-				margin: 0px 0px;
-			}
-
-			.right-justify {
-				display: flex;
-				justify-content: flex-end;
-				margin-top: 20px;
-
-				.apply-changes {
-					display: flex;
-					flex-direction: column;
-					justify-content: flex-end;
-					width: 220px;
-					margin-right: 20px;
-
-					.apply {
-						padding: 6px 10px 6px 10px;
-					}
-
-					.error-text {
-						color: red;
-						font-size: 0.8em;
-						text-align: center;
-					}
-
-					.success-text {
-						color: green;
-						font-size: 0.8em;
-						text-align: center;
-					}
-				}
-			}
-		}
 	}
 
 	.page > ul {
@@ -282,150 +428,6 @@
 	}
 }
 
-.back {
-	// position: absolute;
-	top: 3px;
-	right: 5px;
-	cursor: pointer;
-	font-size: 120%;
-
-	.arrow {
-		display: inline-block;
-		padding-top: 19px;
-		margin-bottom: -4px;
-		width: 17px;
-		height: 0;
-		margin-right: 5px;
-		margin-left: -2px;
-
-		background: url(https://localhost/img/arrow.png) bottom no-repeat;
-	}
-}
-
-.instance_search {
-	width: 200px;
-}
-
-.search_match {
-	box-sizing: border-box;
-	display: inline-block;
-	width: 48%;
-	margin: 5px;
-	padding: 10px;
-	border: 1px solid #d3d3d3;
-
-	> div {
-		display: inline-block;
-	}
-}
-
-.searching {
-	vertical-align: bottom;
-	margin-top: 10px;
-}
-
 .clickable {
 	cursor: pointer;
 }
-
-.instances ul {
-	width: 100%;
-	padding: 0;
-	flex-direction: row;
-	list-style-type: none;
-
-	li.instance {
-		margin: 0 0 10px 0;
-
-		border-radius: 3px;
-		
-		.img-holder {
-			display: inline-block;
-			vertical-align: middle;
-
-			img {
-				width: 50px;
-				height: 50px;
-				-moz-border-radius: 3px;
-				border-radius: 3px;
-				display: inline-block;
-				margin-right: 10px;
-			}
-		}
-
-		div.widget-title {
-			display: flex;
-			justify-content: flex-start;
-			align-items: center;
-			gap: 10px;
-			padding: 10px 15px;
-
-			background: $very-light-gray;
-			border: none;
-			border-radius: 3px;
-			transition: background-color 0.5s;
-
-			span.img-holder {
-				flex-basis: 0;
-			}
-
-			span.incomplete-status-holder {
-				color: #555;
-			}
-
-			span.title-holder {
-				flex-grow: 1;
-
-				.title {
-					margin: 0;
-					padding: 0;
-					vertical-align: middle;
-					font-weight: bold;
-					font-size: 20px;
-				}
-			}
-
-			span.date-holder {
-				font-size: 12px;
-				font-weight: bold;
-			}
-		}
-
-		.info-holder {
-			display: none;
-		}
-
-		&.expanded {
-
-			div.widget-title {
-				background: $light-gray;
-				border-bottom-left-radius: 0px;
-				border-bottom-right-radius: 0px;
-			}
-
-			.manage-btn-container {
-				display: flex;
-				justify-content: end;
-				margin-top: 20px;
-			}
-
-			.info-holder {
-				display: block;
-				padding: 15px;
-				background: $very-light-gray;
-				border-bottom-left-radius: 3px;
-				border-bottom-right-radius: 3px;
-
-				line-height: 1.5em;
-			}
-		}
-	} 
-
-
-	
-
-	// span {
-	// 	display: inline-block;
-	// }
-}
-
