--- a/src/components/widget-player.scss
+++ b/src/components/widget-player.scss
@@ -72,10 +72,12 @@ section.widget {
 	}
 
 	.center {
-		background: white;
+		position: relative;
 		height: 100%;
 		min-height: 400px;
 		margin: 0 auto;
+
+		background: #fff;
 
 		#container {
 			margin: 0 auto;
