--- a/src/components/media.scss
+++ b/src/components/media.scss
@@ -229,14 +229,13 @@ body.import {
 #file-display {
 	width: calc(100% - 20px);
 	max-width: calc(100% - 20px);
-	height: 100%;
+	height: calc(100% - 65px);
 	overflow-y: auto;
 	margin-top: 10px;
 
 	.file-info {
 		display: flex;
 		max-width: calc(100% - 20px);
-		// width: 100%;
 		min-height: 0%;
 		flex-flow: row;
 		align-content: space-between;
