--- a/src/components/no-content-icon.scss
+++ b/src/components/no-content-icon.scss
@@ -5,7 +5,7 @@ p#no-content-icon {
 	font-size: 1.5em;
 }
 
-div#no-score-content {
+div#no-score-content, div#not-scorable {
 	display: flex;
 	flex-direction: column;
 	width: 40%;
@@ -14,7 +14,13 @@ div#no-score-content {
 	padding-left: 40%;
 	margin: 25px auto 0 auto;
 	
-	background: #fff url('/img/kogneato_no_scores.svg') 10% 30%/250px auto no-repeat;
+	&#no-score-content {
+		background: #fff url('/img/kogneato_no_scores.svg') 10% 30%/250px auto no-repeat;
+	}
+
+	&#not-scorable {
+		background: #fff url('/img/kogneato_with_a_broom.svg') 20% 20%/auto 240px no-repeat;
+	}
 
 	p {
 		color: #2e2e2e;
