--- a/src/components/my-widgets-warning-dialog.scss
+++ b/src/components/my-widgets-warning-dialog.scss
@@ -5,9 +5,11 @@
 	height: 320px;
 
 	.title {
+		width: 450px;
+		margin: 4px auto;
+
 		font-weight: bold;
 		font-size: 24px;
-		margin: 4px;
 	}
 
 	.content {
