Removed session caching for support and super user status. Added access settings modifier if a student has access to a non-student widget

--- a/src/components/my-widgets-settings-dialog.scss
+++ b/src/components/my-widgets-settings-dialog.scss
@@ -276,6 +276,17 @@
 						}
 					}
 
+					&.limited-because-student {
+
+						li.normal.show, li.guest-mode {
+							filter: blur(3px);
+						}
+
+						li.studentWarningListItem {
+							margin: 0 0 15px 0;
+						}
+					}
+
 					.input-desc {
 						padding: 10px;
 						margin-bottom: 0;
