disables user-select and pointer-events in limited-because-student selectors

--- a/src/components/my-widgets-settings-dialog.scss
+++ b/src/components/my-widgets-settings-dialog.scss
@@ -280,6 +280,8 @@
 
 						li.normal.show, li.guest-mode {
 							filter: blur(3px);
+							user-select: none;
+							pointer-events: none;
 						}
 
 						li.studentWarningListItem {
