--- a/src/components/my-widgets-settings-dialog.scss
+++ b/src/components/my-widgets-settings-dialog.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 680px;
-	max-height: 675px;
+	max-height: 720px;
 	padding: 10px 10px 0 10px;
 
 	.top-bar {
@@ -278,7 +278,7 @@
 
 					&.limited-because-student {
 
-						li.normal.show, li.guest-mode {
+						li.normal.show, li.guest-mode, li.embed-only {
 							filter: blur(3px);
 							user-select: none;
 							pointer-events: none;
@@ -327,7 +327,6 @@
 				}
 
 				#embedded-only {
-					display: none;
 
 					&.show {
 						display: block;
