Slightly increased requested pixel sizes for gravatars & rounded profile pic corners because it looks good

--- a/src/components/my-widgets-collaborate-dialog.scss
+++ b/src/components/my-widgets-collaborate-dialog.scss
@@ -279,6 +279,7 @@
 					height: 50px;
 					width: 50px;
 					margin-right: 10px;
+					border-radius: 5px;
 				}
 				.name {
 					display: inline-block;
