--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -34,6 +34,8 @@
 		z-index: 1003;
 		width: 540px;
 		min-height: 200px;
+
+		text-align: center;
 	}
 }
 .closed {
@@ -102,7 +104,7 @@
 
 .alert-title {
 	border-bottom: solid 1px #bebebe;
-	text-align: left;
+	text-align: center;
 	position: static;
 	display: block;
 	font-weight: bold;
