--- a/src/components/help-page.scss
+++ b/src/components/help-page.scss
@@ -1,145 +1,183 @@
 @import './include.scss';
 
+.docs {
+	.container {
+		display: flex;
+		justify-content: center;
+		position: relative;
+
+		font-family: 'Lato', arial, serif;
+
+		.page {
+			z-index: 100;
+			max-width: 800px;
+			min-height: 400px;
+			margin: 15px 60px 60px 60px;
+			padding: 40px;
+			overflow: auto;
+
+			border-radius: 4px;
+			border: #e4e4e4 1px solid;
+			
+			box-shadow: 1px 3px 10px #dcdcdc;
+			background-color: #fff;
+			
+			text-align: left;
+			font-size: 14px;
+
+			.content {
+				display: flex;
+				align-items: stretch;
+
+				nav {
+					flex-basis:30%;
+					min-width: 150px;
+					min-height: 100%;
+					margin-right: 20px;
+
+					border-right: solid 0.5px #dcdcdc;
+
+					ul {
+						margin: 0;
+						padding: 0;
+
+						li {
+							display: block;
+							padding: 0.5em 0 0.25em 0;
+							margin-bottom: 0.5em;
+
+							border-bottom: solid 0.5px #dcdcdc;
+
+							a {
+								color: #0093e7;
+								text-decoration: none;
+							}
+						}
+					}
+				}
+
+				main {
+					flex-grow: 1;
+					display: flex;
+					flex-direction: row;
+					align-items: flex-start;
+					flex-wrap: wrap;
+
+					section {
+						&.full-width {
+							flex-basis: 100%;
+							flex-grow: 2;
+						}
+
+						&.half-width {
+							flex-basis: 45%;
+							flex-grow: 1;
+							margin-right: 2.5%;
+						}
+					}
+				}
+			}
+		}
+
+		h1 {
+			margin: 0 0 30px 0;
+			padding: 0 0 20px 0;
+
+			border-bottom: solid #dcdcdc .5px;
+
+			font-weight: 700;
+			font-size: 38px;
+		}
+
+		h2 {
+			margin: 20px 0 0 0;
+
+			font-weight: 400;
+			font-size: 20px;
+		}
+
+		h3 {
+			margin: 30px 0 0 0;
+
+			font-size: 16px;
+		}
+
+		h3 + p {
+			margin-top: 0.5em;
+		}
+
+		a {
+			text-decoration: underline;
+		}
+
+		span.bold {
+			font-weight: bold;
+		}
+
+		dl {
+			dt {
+				font-weight: bold;
+				font-size: 12px;
+			}
+
+			dd {
+				margin: 0.5em 0 0 0;
+				padding-bottom: 10px;
+			}
+		}
+
+		section {
+			margin-bottom: 0px;
+			padding-bottom: 15px;
+			clear: both;
+
+			&.float {
+				width: 25%;
+				clear: none;
+				float: left;
+
+				&.right {
+					width: 40%;
+					float: right;
+				}
+
+				&.left {
+					width: 53%;
+					float: left;
+				}
+			}
+
+			&.bordered {
+				border-bottom: solid #dcdcdc .5px
+			}
+
+			&.bordered-top {
+				border-top: solid #dcdcdc .5px
+			}
+			
+		}
+	}
+}
+
 @media (max-width: 850px) {
-	.docs .container .page {
-		padding: 40px 20px 20px 20px !important;
-		margin: 15px 30px !important;
+
+	.docs {
+
+		.container {
+			.page {
+				padding: 40px 20px 20px 20px !important;
+				margin: 15px 30px !important;
+
+				section.float.right {
+					float: none !important;
+					width: 100% !important;
+				}
+
+				section.float.left {
+					width: 100% !important;
+					margin-bottom: 20px !important;
+				}
+			}
+		}
 	}
-
-	.docs .container .page section.float.right {
-		float: none !important;
-		width: 100% !important;
-	}
-
-	.docs .container .page section.float.left {
-		width: 100% !important;
-	}
-
-	.docs .container .page section.float.left {
-		margin-bottom: 20px !important;
-	}
-}
-
-.docs .container {
-	display: flex;
-	justify-content: center;
-	// margin: 0 auto;
-	// width: 970px;
-	position: relative;
-
-	font-family: 'Lato', arial, serif;
-}
-
-.docs .container .page {
-	border-radius: 4px;
-	border: #e4e4e4 1px solid;
-	box-shadow: 1px 3px 10px #dcdcdc;
-
-	margin: 15px 50px;
-	z-index: 100;
-	min-height: 400px;
-	text-align: left;
-	font-size: 14px;
-
-	overflow: auto;
-
-	width: 685px;
-	// background: url('/img/question_mark_circle.png') 780px 30px no-repeat;
-
-	background-color: #fff;
-	margin-bottom: 60px;
-
-	padding: 40px 215px 20px 60px;
-}
-
-.docs .container h1 {
-	
-	font-weight: 700;
-	font-size: 38px;
-	padding: 0 0 5px 0;
-	padding-bottom: 20px;
-	margin: 0 0 30px 0;
-	border-bottom: solid #dcdcdc .5px;
-}
-
-.docs .container h2 {
-	font-weight: 400;
-	font-size: 20px;
-	margin: 20px 0 0 0;
-}
-
-.docs .container .page section {
-	margin-bottom: 0px;
-	padding-bottom: 15px;
-	clear: both;
-}
-
-.docs .container .page section.float {
-	width: 25%;
-	clear: none;
-	float: left;
-}
-
-.docs .container .page section.float.right {
-	width: 40%;
-	float: right;
-}
-
-.docs .container .page section.float.left {
-	width: 53%;
-	float: left;
-}
-
-.docs .container .page section.bordered {
-	border-bottom: solid #dcdcdc .5px
-}
-
-.docs .container .page section.bordered-top {
-	border-top: solid #dcdcdc .5px
-}
-
-.docs .container h3 {
-	margin: 30px 0 0 0;
-	font-size: 12px;
-}
-
-.docs .container h3 + p {
-	margin-top: 0.5em;
-}
-
-.docs .container a {
-	text-decoration: underline;
-}
-
-.get_flash {
-	background: url('/img/get_flashplayer.gif');
-	width: 160px;
-	display: block;
-	margin: 0 auto;
-	text-indent: -9999px;
-	background-repeat: no-repeat;
-	height: 41px;
-}
-
-.get_flash:active {
-	background-position: 0 2px;
-}
-
-.docs .container dl dt {
-	font-weight: bold;
-	font-size: 12px;
-}
-.docs .container dl dd {
-	padding-bottom: 10px;
-	margin: 0.5em 0 0 0;
-}
-
-.docs .no_flash,
-.docs .flash_installed {
-	background: #f7f7f7;
-	border-radius: 5px;
-	padding: 15px 20px;
-	text-align: center;
-	font-size: 15px;
-	color: #4a4a4a;
 }
