--- a/src/components/help-page.scss
+++ b/src/components/help-page.scss
@@ -64,6 +64,9 @@
 					flex-wrap: wrap;
 
 					section {
+						margin-bottom: 0px;
+						padding-bottom: 15px;
+
 						&.full-width {
 							flex-basis: 100%;
 							flex-grow: 2;
@@ -129,57 +132,46 @@
 				padding-bottom: 10px;
 			}
 		}
-
-		section {
-			margin-bottom: 0px;
-			padding-bottom: 15px;
-			clear: both;
-
-			&.float {
-				width: 25%;
-				clear: none;
-				float: left;
-
-				&.right {
-					width: 40%;
-					float: right;
-				}
-
-				&.left {
-					width: 53%;
-					float: left;
-				}
-			}
-
-			&.bordered {
-				border-bottom: solid #dcdcdc .5px
-			}
-
-			&.bordered-top {
-				border-top: solid #dcdcdc .5px
-			}
-			
-		}
 	}
 }
 
 @media (max-width: 850px) {
 
 	.docs {
-
 		.container {
 			.page {
-				padding: 40px 20px 20px 20px !important;
-				margin: 15px 30px !important;
+				padding: 40px 20px 20px 20px;
+				margin: 15px 30px;
+			}
+		}
+	}
+}
 
-				section.float.right {
-					float: none !important;
-					width: 100% !important;
-				}
+@media (max-width: 720px) {
+	.docs {
+		.container {
+			.page {
+				.content {
+					flex-direction: column;
 
-				section.float.left {
-					width: 100% !important;
-					margin-bottom: 20px !important;
+					nav {
+						flex-basis: 100%;
+						min-width: 100%;
+
+						border-right: none;
+
+						ul {
+							max-width: 90%;
+
+							li {
+								padding-left: 5%;
+							}
+						}
+					}
+
+					main {
+						flex-basis: 100%;
+					}
 				}
 			}
 		}
