--- a/src/components/media.scss
+++ b/src/components/media.scss
@@ -225,7 +225,62 @@ body.import {
 		.recorder_cancel {
 			display: block;
 			margin: 12px 0 0 0;
+
+			cursor: pointer;
 		}
+
+		#drag-wrapper {
+			position: relative;
+			height: 333px;
+			margin: 45px 55px 30px;
+			border: 2px dashed #dadada;
+			border-radius: 5px;
+			background: #f5f5f5;
+		
+			.drag-text {
+				position: absolute;
+				top: 50%;
+				transform: translate(-50%, -50%);
+				left: 50%;
+				text-align: center;
+			}
+		
+			&.drag-is-dragover {
+				background-color: grey;
+			}
+		}
+
+		.drag-footer {
+			display: flex;
+  			align-items: center;
+			justify-content: flex-start;
+			gap: 20px;
+
+			.action_button {
+				margin: 0;
+				font-weight: 400;
+
+				&.record-toggle {
+					display: flex;
+					justify-content: center;
+					padding: 9px 12px;
+
+					&:before {
+						position: relative;
+						bottom: -1px;
+						display: inline-block;
+						content: '';
+						width: 19px;
+						height: 19px;
+						margin-right: 6px;
+						// margin: 6px;
+
+						background: url('/img/mic-icon.svg') no-repeat center center / 19px 19px;
+					}
+				}
+			}
+		}
+
 	}
 
 	.pane-header {
@@ -283,26 +338,7 @@ body.import {
 	}
 }
 
-#drag-wrapper {
-	position: relative;
-	height: 333px;
-	margin: 45px 55px 30px;
-	border: 2px dashed #dadada;
-	border-radius: 5px;
-	background: #f5f5f5;
 
-	.drag-text {
-		position: absolute;
-		top: 50%;
-		transform: translate(-50%, -50%);
-		left: 50%;
-		text-align: center;
-	}
-
-	&.drag-is-dragover {
-		background-color: grey;
-	}
-}
 
 #sort-bar {
 	display: flex;
