Apply pagination rules to all components using apiSearchUsers and fix image size of user avatars in search results

--- a/src/components/support-page.scss
+++ b/src/components/support-page.scss
@@ -50,7 +50,11 @@
 
 		.loading {
 			position: relative;
-			height: 30px;
+			height: 40px;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			margin: 5px 0;
 
 			.loading-text {
 				margin-left: 50px;
