--- a/src/components/my-widgets-collaborate-dialog.scss
+++ b/src/components/my-widgets-collaborate-dialog.scss
@@ -16,7 +16,7 @@
 		position: relative;
 		text-align: left;
 		display: block;
-		
+
 		font-weight: bold;
 	}
 
@@ -67,15 +67,16 @@
 		flex-wrap: wrap;
 		align-items: flex-start;
 
-		top: 32px;
+		top: 34px;
 		right: 0px;
-		width: 447px;
+		width: 449px;
+		max-height: 300px;
 		padding-bottom: 5px;
 		overflow: auto;
-		
+
 		background-color: #ffffff;
 		border: #bfbfbf 1px solid;
-		
+
 		text-align: left;
 
 		.collab-search-match {
@@ -101,7 +102,7 @@
 				margin: 5px 0 0 5px;
 				font-size: 14px;
 				text-align: left;
-				
+
 				font-family: 'Lucida Grande', sans-serif;
 			}
 		}
