Add error handlers to my-widgets-page and support pages

--- a/src/components/extra-attempts-dialog.scss
+++ b/src/components/extra-attempts-dialog.scss
@@ -36,6 +36,11 @@
 		font-size: 16px;
 	}
 
+	.attempts_search_error {
+		color: red;
+		font-size: 0.8em;
+	}
+
 	.attempts_search_list {
 		width: 447px;
 		position: absolute;
