--- a/src/components/support-page.scss
+++ b/src/components/support-page.scss
@@ -87,6 +87,11 @@
 				font-size: 0.85em;
 			}
 		}
+		.search_error {
+			color: red;
+			font-size: 0.8em;
+			margin: 0px 15px;
+		}
 
 		.search_list {
 			.search_match.deleted {
