Adds conditionally rendered content when user search returns an empty array

--- a/src/components/my-widgets-scores.scss
+++ b/src/components/my-widgets-scores.scss
@@ -180,6 +180,11 @@
 			&.loading {
 				display: flex;
 			}
+
+			.no-user-search-results {
+				margin-left: 20px;
+				font-weight: 700;
+			}
 		}
 
 		.display.data {
