--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -3,9 +3,12 @@
 	display: flex;
 
 	max-width: 100%;
-	max-height: 100%;
-	min-width: 500px;
+	max-height: 95%;
 	min-height: 300px;
+
+	@media screen and (min-width: 620px) {
+		min-width: 620px;
+	}
 
 	position: fixed;
 
@@ -61,7 +64,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	max-height: 100%;
 	padding: 10px 10px 10px 10px;
 	box-sizing: border-box;
 
