--- a/src/components/my-widgets-settings-dialog.scss
+++ b/src/components/my-widgets-settings-dialog.scss
@@ -1,8 +1,12 @@
+$mobile-width: 620px;
+
 .settings-modal {
 	display: flex;
 	flex-direction: column;
-	width: 680px;
+	max-width: 680px;
+	width: 100%;
 	padding: 10px 10px 0 10px;
+	max-height: 100%;
 
 	.top-bar {
 		display: flex;
@@ -41,13 +45,22 @@
 		display: flex;
 		flex-direction: column;
 		align-items: baseline;
-		justify-content: center;
-		padding: 0;
+		// justify-content: center;
+		padding: 0 1em 0 0;
 		margin: 0 20px 0 20px;
+		max-height: 75%;
+		overflow-y: auto;
+		overflow-x: hidden;
 
 		.attempt-content {
 			display: flex;
+			flex-wrap: wrap;
 			margin-bottom: 5px;
+			width: 100%;
+
+			@media screen and (min-width: $mobile-width) {
+				flex-wrap: nowrap;
+			}
 
 			&.hide {
 				display: none;
@@ -58,13 +71,14 @@
 				width: 5.1em;
 				min-width: 5.1em;
 				max-width: 5.1em;
-				margin-right: 30px;
-				text-align: end;
+				margin-bottom: 0.5em;
+				text-align: start;
 			}
 
 			.data-holder {
 				display: flex;
 				flex-direction: column;
+				width: 100%;
 
 				.selector {
 					position: relative;
@@ -166,6 +180,11 @@
 					}
 				}
 
+				.mobile {
+					display: none;
+					margin-bottom: 1em;
+				}
+
 				.attempt-holder {
 					list-style-type: none;
 					display: flex;
@@ -176,6 +195,10 @@
 					margin-top: -5px;
 					position: relative;
 					color: rgba(0, 0, 0, 0.3);
+
+					@media screen and (max-width: $mobile-width) {
+						display: none;
+					}
 
 					&.disabled {
 						opacity: 0.35;
@@ -251,11 +274,27 @@
 						font-size: 13px;
 					}
 				}
+
+
+				@media screen and (max-width: $mobile-width) {
+					.mobile {
+						display: inline-block;
+					}
+					.selector:not(.mobile) {
+						display: none;
+					}
+				}
 			}
 		}
 
 		.to-from {
 			padding: 0;
+			width: 100%;
+
+			li {
+				display: flex;
+				flex-wrap: wrap;
+			}
 
 			.access {
 				margin-top: 20px;
@@ -265,8 +304,8 @@
 					width: 5.1em;
 					min-width: 5.1em;
 					max-width: 5.1em;
-					text-align: end;
-					margin: 0 30px 0 0;
+					text-align: start;
+					margin: 0 30px 0.5em 0;
 				}
 
 				.access-options {
@@ -340,7 +379,8 @@
 		list-style: none;
 		justify-content: center;
 		align-items: center;
-		margin: 4px 0 10px 0;
+		margin: 10px 0;
+		padding: 0;
 
 		.cancel_button {
 			cursor: pointer;
@@ -363,7 +403,8 @@
 		min-width: 5.1em;
 		max-width: 5.1em;
 		margin-right: 30px;
-		text-align: end;
+		text-align: start;
+		margin-bottom: 0.5em;
 	}
 
 	.date-picker {
@@ -372,7 +413,7 @@
 
 		.date-list-elem {
 			display: flex;
-			justify-content: center;
+			justify-content: start;
 			flex-wrap: nowrap;
 			align-items: center;
 		}
