Fix ressponsive styling and remove debug logs

--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -2,7 +2,8 @@
 	/* This way it could be display flex or grid or whatever also. */
 	display: flex;
 
-	max-width: 100%;
+	width: 100%;
+	max-width: 600px;
 	max-height: 95%;
 	min-height: 300px;
 
