--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -303,6 +303,9 @@
 				width: 100%;
 				bottom: 0;
 				text-align: center;
+				background-color: #fafafa;
+				height: 54px;
+				box-sizing: border-box;
 
 				p {
 					font-weight: bold;
@@ -426,7 +429,7 @@
 					left: -105px;
 					top: 0;
 					background-color:#fff;
-					width: 105px;
+					width: 120px;
 					gap: 10px;
 					box-shadow:1px 3px 10px #dbdbdb;
 					border-radius: 4px;
@@ -957,6 +960,30 @@
 					cursor: pointer;
 					vertical-align: middle;
 				}
+			}
+		}
+
+		#embed_dialog {
+			position: absolute;
+			top: -50%;
+			left: 50%;
+			margin: -250px -387px;
+			width: 675px;
+			height: 535px;
+			z-index: 2;
+			box-shadow: 0px 0px 1000px #000, 0px 0px 10px #000;
+			opacity: 0;
+			transition: all 0.3s ease;
+			background: #fff;
+			overflow-x: hidden;
+
+			&.show {
+				opacity: 1;
+				box-shadow: none;
+				text-align: left;
+				top: 50%;
+				width: 800px;
+				z-index: 10;
 			}
 		}
 	}
