--- a/src/components/homepage.scss
+++ b/src/components/homepage.scss
@@ -9,7 +9,8 @@
 		height: 600px;
 		margin: 0 auto;
 
-		background: #fff;
+		//background: #fff;
+		background: #21232a;
  		text-align: left;
 	
 		.store_main {
@@ -22,7 +23,7 @@
 
 			p {
 				margin-left: 50%;
-				color: #000;
+				color: #fff;
 				font-size: calc(16px + (24 - 16) * ((100vw - 300px) / (1600 - 300)));
 				line-height: 160%;
 			}
@@ -35,7 +36,8 @@
 				padding: 30px 0px 100px;
 				overflow: hidden;
 			
-				background: linear-gradient(to right, rgba(255,255,255, 0), rgba(255, 255, 255,1) 55%), url(/img/banner_final.png) no-repeat;	
+				//background: linear-gradient(to right, rgba(255,255,255, 0), rgba(255, 255, 255,1) 55%), url(/img/banner_final.png) no-repeat;
+				background: linear-gradient(to right, rgba(33, 35, 42, 0), rgba(33, 35, 42, 1) 55%), url(/img/banner_final.png) no-repeat;	
 				background-size: contain;
 			
 				text-align: right;
@@ -57,6 +59,7 @@
 	}
 
 	h1 {
+		color: #fff;
 		font-weight: 500;
 		font-size: calc(35px + (40 - 35) * ((100vw - 300px) / (1600 - 300)));
 		margin: 0;
@@ -103,7 +106,8 @@
 .front_bottom {
 	display: grid;
 	width: 100%;
-	background-color: #fbfbfb;
+	//background-color: #fbfbfb;
+	background-color: #21232a;
 	margin-bottom: 0;
 	padding-top: 65px;
 
@@ -113,7 +117,8 @@
 	div {
 		font-weight: 300;
 		font-size: 14px;
-		color: #000;
+		//color: #000;
+		color: #fff;
 
 		margin: 10px 0px 20px 0px;
 		padding: 0;
@@ -123,7 +128,8 @@
 		h2 {
 			font-size: 30px;
 			font-weight: 500;
-			color: #000;
+			//color: #000;
+			color: #fff;
 		}
 
 		&.wrapper_first, &.wrapper_second, &.wrapper_third {
@@ -186,10 +192,12 @@
 	h2 {
 		font-size: 30px;
 		font-weight: 400;
-		color: #000;
+		//color: #000;
+		color: #fff;
 	}
 	p {
-		color: #000;
+		//color: #000;
+		color: #fff;
 		line-height: 150%;
 		font-weight: 300;
 		font-size: 16px;
@@ -243,7 +251,8 @@
 	vertical-align: middle;
 	width: 100%;
 	height: 240px;
-	background-image: linear-gradient(115deg, #3690E6 60%, #37A9E6 40%);
+	//background-image: linear-gradient(115deg, #3690E6 60%, #37A9E6 40%);
+	background-image: linear-gradient(115deg, #227ace 60%, #1d8fcc 40%);
 
 	img {
 		width: 30%;
