Fixing bugs in various error states

--- a/src/components/my-widgets-collaborate-dialog.scss
+++ b/src/components/my-widgets-collaborate-dialog.scss
@@ -1,6 +1,7 @@
 // Collaborate dialog
 .modal .collaborate-modal {
-	width: 620px;
+	width: 100%;
+	box-sizing: border-box;
 
 	font-family: 'Lato', arial, serif;
 
