--- a/src/components/my-widgets-copy-dialog.scss
+++ b/src/components/my-widgets-copy-dialog.scss
@@ -1,7 +1,8 @@
 @import './include.scss';
 
 .modal .copy-modal {
-	width: 620px;
+	width: 100%;
+	box-sizing: border-box;
 	padding: 10px 10px 0 10px;
 
 	.title {
