--- a/src/components/my-widgets-scores.scss
+++ b/src/components/my-widgets-scores.scss
@@ -10,12 +10,27 @@
 	overflow-y: auto;
 	padding-bottom: 1em;
 
-	#export_scores_button.disabled,
-	#export_scores_button.disabled:hover {
-		background: #d4d4d4;
-		color: #545454;
-		cursor: default;
-		opacity: 0.5;
+	.student-activity-header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0;
+
+		border-bottom: #999 dotted 1px;
+	
+		.action_button {
+			
+			color: $extremely-dark-gray;
+			text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+			box-shadow: 1px 2px 4px #ececec;
+
+			&.disabled, &.disabled:hover {
+				background: #d4d4d4;
+				color: #545454;
+				cursor: default;
+				opacity: 0.5;
+			}
+		}
 	}
 
 	.graph {
@@ -40,79 +55,100 @@
 		}
 	}
 
-	h2 {
-		border-bottom: #999 dotted 1px;
-		padding-bottom: 14px;
-		padding-top: 2px;
-		padding-bottom: 13px;
-		margin-bottom: 0;
-	}
-
 	h3 {
 		color: #000000;
 	}
 
-	#export_scores_button {
-		padding: 7px 23px 8px 23px;
-		background-color: $color-yellow;
-		font-weight: 700;
-		color: $extremely-dark-gray;
-		text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
-		box-shadow: 1px 2px 4px #ececec;
-		font-size: 18px;
-		cursor: pointer;
-		display: inline-block;
-		user-select: none;
-		// border: 1px solid #525252;
-		border-radius: 4px;
-		position: absolute;
-		top: 13px;
-		right: 2px;
-
-		&:hover:not(.disabled) {
-			background: $color-yellow-hover;
-			text-decoration: none;
-		}
-
-		&.disabled {
-			color: #545454;
-			cursor: auto;
-		}
-	}
+	
 
 	.scoreWrapper {
-		display: inline-block;
+		display: flex;
+		justify-content: flex-start;
+		flex-direction: column;
 		position: relative;
 		margin-top: 1em;
 
-		ul.choices {
-			display: inline-block;
-			margin: 15px 0 0 0;
-			padding: 0;
-			height: 23px;
+		.scores-header {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: flex-end;
 
-			li {
-				list-style: none;
-				display: inline-block;
-				padding-right: 3px;
-
-				a {
-					color: #000000;
-					padding: 6px 10px 4px 10px;
-					border-left: solid #dbdbdb 1px;
-					border-top: solid #dbdbdb 1px;
-					border-right: solid #dbdbdb 1px;
-					padding-bottom: 5px;
-					cursor: pointer;
-
-					&:hover {
-						text-decoration: none;
-					}
-				}
+			h3.semester-label {
+				display: block;
+				width: auto;
+				margin: 0.25em 0.5em 0.15em 0;
+				padding: 0;
 			}
 
-			li.scoreTypeSelected a {
-				background: #f3f3f3;
+			ul.choices {
+				display: inline-block;
+				width: auto;
+				margin: 15px 0 0 0;
+				padding: 0;
+				height: 23px;
+	
+				li {
+					list-style: none;
+					display: inline-block;
+					padding-right: 3px;
+	
+					a {
+						color: #000000;
+						padding: 6px 10px 4px 10px;
+						border-left: solid #dbdbdb 1px;
+						border-top: solid #dbdbdb 1px;
+						border-right: solid #dbdbdb 1px;
+						padding-bottom: 5px;
+						cursor: pointer;
+	
+						&:hover {
+							text-decoration: none;
+						}
+					}
+				}
+	
+				li.scoreTypeSelected a {
+					background: #f3f3f3;
+				}
+			}
+		}
+
+		.scores-tab-content {
+			display: flex;
+			justify-content: space-between;
+			gap: 0.5em;
+
+			.numeric {
+				width: 105px;
+				margin: 0;
+				padding: 0;
+	
+				li {
+					padding: 5px;
+					margin: 0 0 10px 0;
+
+					list-style: none;
+
+					text-align: center;
+					background: #e9edef;
+					border-radius: 5px;
+	
+					p {
+						padding: 0;
+						margin: 0;
+						color: #0093e7;
+						text-align: center;
+						font-size: 2em;
+						font-weight: 900;
+						font-family: 'Kameron', Georgia, 'Times New Roman', Times, serif;
+					}
+	
+					h4 {
+						padding: 0;
+						margin: 0;
+					}
+				}
 			}
 		}
 
@@ -133,19 +169,13 @@
 			}
 		}
 
-		h3.view {
-			display: inline-block;
-			margin: 15px 0.5em 0 0;
-			padding: 0;
-		}
-
 		.display.graph {
 			background: #ffffff;
 			margin: 0;
 			padding: 20px 0 0 20px;
 			border: solid #dbdbdb 1px;
-			width: 550px;
-			float: left;
+			// width: 550px;
+			// float: left;
 
 			.type {
 				padding: 0;
@@ -330,7 +360,6 @@
 
 			.score-search {
 				background: rgba(0, 0, 0, 0.05);
-				width: 100%;
 				padding: 6px 10px 10px 10px;
 
 				input[type='text'] {
@@ -446,36 +475,6 @@
 
 			tbody tr.rowSelected {
 				background: #ffcb68;
-			}
-		}
-
-		.numeric {
-			float: left;
-			margin: 0;
-			padding: 0;
-			width: 105px;
-
-			li {
-				list-style: none;
-				text-align: center;
-				background: #e9edef;
-				padding: 5px;
-				margin: 0 0 10px 0;
-
-				p {
-					padding: 0;
-					margin: 0;
-					color: #0093e7;
-					text-align: center;
-					font-size: 2em;
-					font-weight: 900;
-					font-family: 'Kameron', Georgia, 'Times New Roman', Times, serif;
-				}
-
-				h4 {
-					padding: 0;
-					margin: 0;
-				}
 			}
 		}
 	}
